Fix spacing under all nav-tabs in BS4

--- a/src/styles.css
+++ b/src/styles.css
@@ -638,7 +638,7 @@ h4.work {
   border-top-color: #fff;
 }
 
-.nav-tabs-member {
+.nav-tabs {
   margin-left: 0px;
   margin-bottom: 10px;
 }
